# domonationCounter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  app.py  constance.py  docker-compose.yml  pyproject.toml  test_simulation.py
.github/workflows/: test.yml
classes/database/: GameSession.py  Games.py  db.py  game_session.py  models.py  stations.py  stationsTakeOvers.py  stations_take_overs.py  teams.py
routes/: basicRoutsHandling.py
static/styles/: general.css  navBar.css  tables.css
swagger_docs/: base_get.yml  enter_page_get.yml  enter_to_session_get.yml  game_is_alive_get.yml  games_menu_get.yml  home_get.yml  home_post.yml  live_game_get.yml  live_game_post.yml  live_station_get.yml  live_station_takeover_get.yml  log_to_game_get.yml  log_to_game_post.yml  new_game_get.yml  new_game_post.yml  old_games_get.yml  old_games_recalc_get.yml  run_game_get.yml  run_game_get_score_get.yml  run_game_stop_get.yml  stations_edit_post.yml  stations_get.yml  stations_post.yml  stations_remove_get.yml  teams_get.yml  teams_post.yml  update_session_bonus_post.yml
templates/: enterPage.html  gameHomePage.html  home.html  manageRunningGame.html  navigationBar.html  old_games.html  teams.html
tests/: conftest.py  test_models.py  test_routes.py
