[tool.poetry]
name = "domination-counter"
version = "0.1.0"
description = "A web application for managing and tracking area control games (domonation)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.3.2"
flask-sqlalchemy = "3.0.5"
Werkzeug = "2.3.6"
flask-session = "0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
