[tool.poetry]
name = "domination-counter"
version = "0.1.0"
description = "A Flask web application for tracking game domination scores"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.0.5"
Flask-Session = "^0.5.0"
flasgger = "^0.9.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-flask = "^1.3.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
ruff = "^0.1.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
